--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -1,5 +1,9 @@
 /* root */
 
 .root {
+  min-height: 100vh;
   font-family: 'Inter', 'Arial', sans-serif;
+  color: #fff;
+  background-color: #2a2c2f;
 }
+
