--- a/blocks/grid/_simple/grid_simple.css
+++ b/blocks/grid/_simple/grid_simple.css
@@ -1,11 +1,9 @@
-.root_grid_simple {
-  display: grid;
+.grid_simple {
   grid-template-columns: minmax(320px, 1280px);
   grid-template-rows: min-content 1fr min-content;
-  align-items: start;
-  justify-content: center;
   grid-template-areas:
     "header"
     "main"
     "footer";
+  max-width: 1280px;
 }
