--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,15 @@
 @import url(../vendor/fonts.css);
 
 @import url(../blocks/root/root.css);
-@import url(../blocks/root/_grid/root_grid_simple.css);
+@import url(../blocks/root/__grid/root__grid.css);
+
+@import url(../blocks/grid/grid.css);
+@import url(../blocks/grid/_simple/grid_simple.css);
+
+@import url(../blocks/link/link.css);
 
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__langs/header__langs.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__lang-link/header__lang-link.css);
+@import url(../blocks/header/__lang-link/_status/header__lang-link_status_active.css);
