--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,7 +5,12 @@
   display: flex;
   flex-wrap: wrap;
   min-height: 42px;
-  padding: 0 48px;
+}
+
+@media screen and (max-width: 1279px) {
+  .header {
+    padding: 0 48px;
+  }
 }
 
 @media screen and (max-width: 1023px) {
