--- a/pages/index.css
+++ b/pages/index.css
@@ -9,11 +9,15 @@
 
 @import url(../blocks/link/link.css);
 
+@import url(../blocks/title/title.css);
+
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__langs/header__langs.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_status/header__lang-link_status_active.css);
+
+@import url(../blocks/main/main.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__menu/footer__menu.css);
