--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,18 +6,12 @@
   align-items: flex-end;
   width: 100%;
   min-height: 134px;
-  padding-bottom: 24px;
-}
-
-@media screen and (max-width: 1279px) {
-  .footer {
-    padding: 0 48px 24px;
-  }
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    padding: 0 24px 24px;
+    padding: 0 24px;
   }
 }
 
