--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,12 +6,7 @@
   flex-wrap: wrap;
   width: 100%;
   min-height: 42px;
-}
-
-@media screen and (max-width: 1279px) {
-  .header {
-    padding: 0 48px;
-  }
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1023px) {
