--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,14 @@
 @import url(../blocks/lead/__image/lead__image.css);
 @import url(../blocks/lead/__image-title/lead__image-title.css);
 
+@import url(../blocks/intro/intro.css);
+
+@import url(../blocks/photo-grid/photo-grid.css);
+
+@import url(../blocks/places/places.css);
+
+@import url(../blocks/cover/cover.css);
+
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__menu/footer__menu.css);
 @import url(../blocks/footer/__link/footer__link.css);
