--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -9,6 +9,12 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1279px) {
+  .footer {
+    padding: 0 48px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .footer {
     padding: 0 24px;
