--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,6 +9,12 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1279px) {
+  .header {
+    padding: 0 48px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .header {
     padding: 0 24px;
