--- a/blocks/lead/__image-title/lead__image-title.css
+++ b/blocks/lead/__image-title/lead__image-title.css
@@ -5,3 +5,15 @@
   letter-spacing: 0.15em;
   text-transform: uppercase;
 }
+
+@media screen and (max-width: 1023px) {
+  .lead__image-title {
+    margin-left: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__image-title {
+    margin-left: 16px;
+  }
+}
