--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,3 +3,9 @@
   margin: 0 auto 32px;
   text-align: center;
 }
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    margin-bottom: 16px;
+  }
+}
