--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,5 +3,11 @@
 .lead {
   grid-area: lead;
   max-width: 984px;
-  padding: 56px 0 92px;
+  padding: 56px 0 0;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    padding: 48px 0 0;
+  }
 }
