--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -6,3 +6,10 @@
   line-height: 1.05;
   font-weight: 900;
 }
+
+@media screen and (max-width: 767px) {
+  .title {
+    font-size: 40px;
+    line-height: 1.1;
+  }
+}
