--- a/pages/index.css
+++ b/pages/index.css
@@ -27,6 +27,9 @@
 @import url(../blocks/lead/__image-title/lead__image-title.css);
 
 @import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
 
 @import url(../blocks/photo-grid/photo-grid.css);
 
