--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,4 +2,17 @@
 
 .intro {
   grid-area: intro;
+  max-width: 690px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    padding-right: 10px;
+  }
 }
