--- a/blocks/gallery/__item/gallery__item.css
+++ b/blocks/gallery/__item/gallery__item.css
@@ -5,21 +5,21 @@
 
 @media screen and (max-width: 1279px) {
   .gallery__item {
-    max-width: 300px;
-    max-height: 225px;
+    width: 300px;
+    height: 225px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .gallery__item {
-    max-width: 352px;
-    max-height: 264px;
+    width: 352px;
+    height: 264px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .gallery__item {
-    max-width: 288px;
-    max-height: 216px;
+    width: 288px;
+    height: 216px;
   }
 }
