--- a/pages/index.css
+++ b/pages/index.css
@@ -8,6 +8,7 @@
 @import url(../blocks/grid/_simple/grid_simple.css);
 
 @import url(../blocks/link/link.css);
+@import url(../blocks/link/_overlay/link_overlay.css);
 
 @import url(../blocks/title/title.css);
 
