--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -5,6 +5,10 @@
   color: #fff;
 }
 
+.place__paragraph:last-child {
+  margin-bottom: 0;
+}
+
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     margin-bottom: 25px;
