--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,19 +5,19 @@
   display: flex;
   align-items: flex-end;
   width: 100%;
-  min-height: 134px;
+  padding: 92px 0 0;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 1279px) {
   .footer {
-    padding: 0 48px;
+    padding: 92px 48px 0;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .footer {
-    padding: 0 24px;
+    padding: 88px 24px 0;
   }
 }
 
@@ -25,6 +25,6 @@
   .footer {
     flex-direction: column;
     align-items: flex-start;
-    padding: 64px 16px 24px;
+    padding: 65px 16px 0;
   }
 }
