--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,54 +5,31 @@
   position: relative;
   width: 100%;
   min-height: 740px;
+  max-height: 740px;
   background-image: url(../../images/cover-bg.jpg);
-}
- .cover__overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(42, 44, 47, .3);
-  transition: background-color .2s linear;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+
 }
 
-.cover__overlay:hover {
-  background-color: rgba(42, 44, 47, .8);
+@media screen and (max-width: 1279px) {
+  .cover {
+    min-height: 640px;
+    max-height: 640px;
+  }
 }
 
-.cover__title {
-  display: block;
-  max-width: 560px;
-  margin: 0 0 32px;
-  font-size: 72px;
-  line-height: 1.06;
-  text-align: center;
+@media screen and (max-width: 1023px) {
+  .cover {
+    min-height: 480px;
+    max-height: 480px;
+  }
 }
 
-.cover__subtitle {
-  display: block;
-  max-width: 360px;
-  margin: 0 auto 16px;
-  font-size: 18px;
-  line-height: 1.22;
-  text-align: center;
+@media screen and (max-width: 767px) {
+  .cover {
+    min-height: 200px;
+    max-height: 200px;
+  }
 }
-
-.cover__link {
-  color: #fff;
-  text-decoration: none;
-}
-
-.cover__link::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-
