--- a/blocks/photo-grid/__image/photo-grid__image.css
+++ b/blocks/photo-grid/__image/photo-grid__image.css
@@ -1,8 +1,8 @@
-.gallery__image {
+.photo-grid__image {
   display: block;
   width: 100%;
   height: 100%;
-  max-width: 100%;
   max-height: 100%;
+  max-width: 100%;
   object-fit: cover;
 }
