--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,25 +1,23 @@
-.gallery__item {
-  width: 284px;
+.photo-grid__item {
+  display: block;
+  max-width: 100%;
   height: 213px;
 }
 
 @media screen and (max-width: 1279px) {
-  .gallery__item {
-    width: 300px;
+  .photo-grid__item {
     height: 225px;
   }
 }
 
 @media screen and (max-width: 1023px) {
-  .gallery__item {
-    width: 352px;
+  .photo-grid__item {
     height: 264px;
   }
 }
 
 @media screen and (max-width: 767px) {
-  .gallery__item {
-    width: 288px;
+  .photo-grid__item {
     height: 216px;
   }
 }
