--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,31 @@
 /* Photo-grid */
 
+/* Gallery */
+
 .photo-grid {
-  /* чтобы не было путого правила, так можно делать? */
   padding: 0;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-gap: 16px;
+  justify-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1279px) {
+  .photo-grid {
+    grid-gap: 14px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    grid-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    grid-gap: 12px;
+  }
 }
