--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,15 +1,8 @@
 /* Title */
 
+/* общие правила для всех заголовков */
+
 .title {
   font-family: 'Inter', 'Arial', sans-serif;
-  font-size: 96px;
-  line-height: 1.05;
   font-weight: 900;
-}
-
-@media screen and (max-width: 767px) {
-  .title {
-    font-size: 40px;
-    line-height: 1.1;
-  }
 }
