--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,10 @@
 @import url(../blocks/link/_overlay/link_overlay.css);
 
 @import url(../blocks/title/title.css);
+@import url(../blocks/title/_size/title_size_main.css);
+@import url(../blocks/title/_size/title_size_l.css);
+@import url(../blocks/title/_size/title_size_m.css);
+@import url(../blocks/title/_size/title_size_cover.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__langs/header__langs.css);
