--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -15,6 +15,7 @@
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     margin-bottom: 40px;
+    padding: 0 5px;
     font-size: 16px;
     line-height: 1.25;
   }
