fix grid block (unnecessary --mod)

--- a/blocks/grid/grid.css
+++ b/blocks/grid/grid.css
@@ -4,4 +4,9 @@
   display: grid;
   align-items: start;
   justify-content: stretch;
+  grid-template-rows: min-content 1fr min-content;
+  grid-template-areas:
+    "header"
+    "main"
+    "footer";
 }
