--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,6 +3,9 @@
   max-width: 560px;
   margin: 10px 0 32px;
   text-align: center;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 1.6;
 }
 
 @media screen and (max-width: 1023px) {
@@ -15,5 +18,7 @@
   .cover__title {
     max-width: 250px;
     margin: 0 0 16px;
+    font-size: 32px;
+    line-height: 1.09;
   }
 }
