--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,11 +2,16 @@
   max-width: 720px;
   margin: 0 auto 32px;
   text-align: center;
+  font-weight: 900;
+  font-size: 96px;
+  line-height: 1.05;
 }
 
 @media screen and (max-width: 767px) {
   .lead__title {
     margin-bottom: 16px;
     padding: 0 5px;
+    font-size: 40px;
+    line-height: 1.1;
   }
 }
