--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,10 +1,22 @@
 .place__title {
   align-self: end;
   margin: 0;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 1.06;
+}
+
+@media screen and (max-width: 1023px) {
+  .place__title {
+    font-size: 42px;
+    line-height: 1.1;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .place__title {
     padding: 0 16px;
+    font-size: 32px;
+    line-height: 1.09;
   }
 }
