--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,14 +1,10 @@
 .cover__link {
-  color: #fff;
-  text-decoration: none;
-}
-
-.cover__link::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
+  color: #fff;
+  text-decoration: none;
 }
